--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: random_additions
+name: RandomAdditions
 version: '${project.version}'
-main: eu.pommeray.random_additions.Random_additions
+main: eu.pommeray.random_additions.RandomAdditions
 api-version: '1.20'
 commands:
   kit:
