--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: eu.pommeray.random_additions.RandomAdditions
 api-version: '1.20'
 commands:
-  kit:
+  calculator:
     description: Allows calculations of simple expressions
     usage: /calculator <firstNumber> <operation> <secondNumber>
     permission: random_additions.calculator
