Calculator now makes only one operation at a time and really calculate the expressions. Tests were done to get the name of the advancements. Build should fail because of the style checking.

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,8 @@
                 <encoding>UTF-8</encoding>
                 <consoleOutput>true</consoleOutput>
                 <failsOnError>true</failsOnError>
+                <violationSeverity>warning</violationSeverity>
+                <includeTestSourceDirectory>true</includeTestSourceDirectory>
             </configuration>
         </plugin>
     </plugins>
