--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.11.0</version>
          <configuration>
-            <source>8</source>
-            <target>8</target>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
             <encoding>UTF-8</encoding>
             <compilerArgs>
               <arg>-XDcompilePolicy=simple</arg>
@@ -34,7 +34,7 @@
               <path>
                 <groupId>com.google.errorprone</groupId>
                   <artifactId>error_prone_core</artifactId>
-                  <version>RELEASE</version>
+                  <version>2.28.0</version>
                </path>
                   <!-- Other annotation processors go here.
 
