--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <version>3.13.0</version>
          <configuration>
             <source>${java.version}</source>
             <target>${java.version}</target>
@@ -49,7 +49,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.4</version>
+        <version>3.6.0</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -87,7 +87,7 @@
                 <dependency>
                     <groupId>com.puppycrawl.tools</groupId>
                     <artifactId>checkstyle</artifactId>
-                    <version>9.3</version>
+                    <version>10.17.0</version>
                 </dependency>
             </dependencies>
             <executions>
@@ -106,6 +106,44 @@
                 <violationSeverity>warning</violationSeverity>
                 <includeTestSourceDirectory>true</includeTestSourceDirectory>
             </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <version>3.5.0</version>
+            <executions>
+                <execution>
+                    <id>enforce-versions</id>
+                    <goals>
+                        <goal>enforce</goal>
+                    </goals>
+                    <configuration>
+                        <rules>
+                            <bannedDependencies>
+                                <searchTransitive>true</searchTransitive>
+                                <includes>
+                                    <include>org.junit.jupiter:junit-jupiter:[5.11.0,):*:test</include>
+                                </includes>
+                                <message>Latest Junit-Jupiter versions do not work with the latest Mockito releases!</message>
+                            </bannedDependencies>
+                            <bannedPlugins>
+                                <!-- will only display a warning but does not fail the build. -->
+                                <level>WARN</level>
+                                <excludes>
+                                    <exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>
+                                </excludes>
+                                <message>Please consider using the maven-invoker-plugin (http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
+                            </bannedPlugins>
+                            <requireMavenVersion>
+                                <version>3.9.5</version>
+                            </requireMavenVersion>
+                            <requireJavaVersion>
+                                <version>21</version>
+                            </requireJavaVersion>
+                        </rules>
+                    </configuration>
+                </execution>
+            </executions>
         </plugin>
     </plugins>
     <resources>
@@ -153,8 +191,15 @@
       <dependency>
           <groupId>org.junit.jupiter</groupId>
           <artifactId>junit-jupiter</artifactId>
-          <version>RELEASE</version>
+          <version>5.10.2</version>
           <scope>test</scope>
       </dependency>
   </dependencies>
+
+  <distributionManagement>
+    <site>
+      <id>dev.pommeray.eu</id>
+        <url>file://${basedir}/target/website</url>
+    </site>
+  </distributionManagement>
 </project>
