--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
@@ -193,6 +196,17 @@
           <artifactId>junit-jupiter</artifactId>
           <version>5.10.2</version>
           <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.github.seeseemelk</groupId>
+          <artifactId>MockBukkit-v1.20</artifactId>
+          <version>3.89.0</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>net.kyori</groupId>
+                  <artifactId>adventure-platform-bungeecord</artifactId>
+              </exclusion>
+          </exclusions>
       </dependency>
   </dependencies>
 
