--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,9 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -34,6 +36,7 @@
                 <arg>-Xplugin:ErrorProne
                     -XepDisableWarningsInGeneratedCode
                 </arg>
+                <arg>-Xlint:-options</arg>
             </compilerArgs>
             <annotationProcessorPaths>
               <path>
