--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,32 @@
                 </execution>
             </executions>
         </plugin>
+        <plugin>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+                <skipDeploy>true</skipDeploy>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.8</version>
+            <configuration>
+                <message>Creating site for ${project.version}</message>
+                <repositoryOwner>matthias-pmr</repositoryOwner>
+                <repositoryName>Matthias</repositoryName>
+                <server>github</server>
+            </configuration>
+            <executions>
+                <execution>
+                    <phase>site-deploy</phase>
+                    <goals>
+                        <goal>site</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
     <resources>
       <resource>
