--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
                 </execution>
             </executions>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+            <version>3.0.0</version>
+        </plugin>
     </plugins>
     <resources>
       <resource>
