Maven site is reloaded on each push and a reporting section had been added to the maven config

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+      - name: Build Maven Site
+        run: mvn site
         with:
           # Upload entire repository
           path: './target/site/'
