--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,23 @@
       </dependency>
   </dependencies>
 
+  <reporting>
+     <plugins>
+          <plugin>
+              <groupId>org.jacoco</groupId>
+                  <artifactId>jacoco-maven-plugin</artifactId>
+                  <version>0.8.10</version>
+                  <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>report</report>
+                        </reports>
+                    </reportSet>
+             </reportSets>
+          </plugin>
+     </plugins>
+  </reporting>
+
   <distributionManagement>
     <site>
       <id>dev.pommeray.eu</id>
