--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -36,12 +38,3 @@ build/
 .DS_Store
 /.idea/
 /.idea/
-/target/checkstyle-cachefile
-/target/generated-sources/
-/target/checkstyle-result.xml
-/target/generated-test-sources/
-/target/classes/
-/target/test-classes/
-/target/surefire-reports/
-/target/maven-status/
-/target/checkstyle-checker.xml
