--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,9 +37,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
       - name: Build Maven Site
         run: mvn site
-        with:
-          # Upload entire repository
-          path: './target/site/'
+        # Change the working directory to the target site directory
+        working-directory: ./target/site/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
