should deploy the site with the path target/site/

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,10 +35,11 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: './target/site/'
       - name: Build Maven Site
         run: mvn site
-        # Change the working directory to the target site directory
-        working-directory: ./target/site/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
