adding the permission to write in maven.yml

--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
       </dependency>
   </dependencies>
 
-  <!--reporting>
+  <reporting>
     <plugins>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -233,7 +233,7 @@
         </reportSets>
       </plugin>
     </plugins>
-  </reporting-->
+  </reporting>
 
   <distributionManagement>
     <site>
