--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - run: mvn -e --batch-mode --update-snapshots verify
-    - run: mkdir staging && cp target/*.jar staging
+    - run: mkdir -p staging && cp target/*.jar staging
     - uses: actions/upload-artifact@v4
       with:
         name: Package
