--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,26 @@ on:
     branches: [ "main" ]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+      - run: mvn -B package --file pom.xml
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Package
+          path: target/
+
   test:
     runs-on: ubuntu-latest
+    needs: build
     permissions:
       contents: write
 
