adding a jacoco:report command in the test.yml to force the maven site to have a jacoco-report always actualised

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,7 @@ jobs:
           name: Package
           path: staging
       - run: mvn -e --batch-mode --update-snapshots verify
+      - run: mvn jacoco:report
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
