--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,22 +27,31 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build Maven Site including JaCoCo report
+        run: |
+          mvn clean verify jacoco:report site
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
           path: './target/site/'
-
-      - name: Build Maven Site
-        run: mvn site
 
       - name: Deploy to GitHub Pages
         id: deployment
