returning to the mvn clean site command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build Maven Site
         run: |
-          mvn clean site:deploy
+          mvn clean site
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
